--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,9 +4,19 @@ on:
     branches:
       - main
 jobs:
-    deploy-app:
+    first_job_create_archive:
         runs-on: ubuntu-latest
         steps:
-            - run: echo "Build java application"
-            - run: echo "Test java application"
-            - run: echo "Deploy java application"         
+            - name: "Create archive"
+              run: |
+                echo "Create archive" >> archive.log
+            - name: "Upload archive"
+              run: |
+                echo "Upload archive" >> upload.log
+    second_job_print_archive:
+        runs-on: ubuntu-latest
+        needs: first_job_create_archive
+        steps:
+            - name: "Print archive"
+              run: |
+                cat archive.log && cat upload.log
